# video-converter

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  main.tf  readme.md
src/: main.rs  video_converter.rs
src/app/: mod.rs
src/image_optimizer/: mod.rs
src/routes/: mod.rs  uploader.rs
src/video_converter/: mod.rs
