[package]
name = "video-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
ffmpeg-cli = "0.1"
futures = "0.3"
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = "0.12.8"
anyhow = "1.0.44"
oxipng = "9.1.2"

[[bin]]
name = "video-converter"
path = "src/main.rs"